<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="14sp"
            android:text="Enter Product name:"
            android:textColor="#4A148C"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/TFenterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="product name"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter Product Price:"
            android:textColor="#4A148C"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/TFenterPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Price $ 0.00"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter Quantity:"
            android:textColor="#4A148C"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/TFenterQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Quantity #"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="Expiration Date:"
            android:textColor="#4A148C"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/TFExpiration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Date: 00/00"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/TVExpiration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Location:"
            android:textColor="#4A148C"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/TFLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Place"
            android:inputType="textPersonName" />


        <Button
            android:id="@+id/Badd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAddButtonClick"
            android:text="Add" />

        <Button
            android:id="@+id/ExistingProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onGoBackClick"
            android:text=" Update Existing Product" />
    </LinearLayout>
</LinearLayout>
