<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="Manage Product"
        android:textColor="#BF360C"
        android:textSize="29sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="262dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/TVid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emptystring1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TVproduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emptystring2"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TVquantity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/emptyString3"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emptyString4"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </TableLayout>

    <Button
        android:id="@+id/updateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="Uptdate" />

    <Button
        android:id="@+id/BaddNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="Add New" />

    <Button
        android:id="@+id/removeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="Remove" />

</LinearLayout>
